# hello_world_rust_2026

./: .gitignore  Cargo.toml
crates/basic/: Cargo.toml
crates/restaurant/src/: back_of_house.rs  lib.rs  main.rs
src/: lib.rs  main.rs
