[workspace]
members = [
    "crates/backyard",
    "crates/restaurant"
]

[package]
name = "helloworld"
version = "0.1.0"
edition = "2024"
default-run = "helloworld"

[dependencies]
rand = "0.10.0"
crossterm = "0.29.0"
# 推荐配置方案
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = "0.28.0"
strum_macros = "0.28.0"
unicode-segmentation = "1.13.2"
trpl = "0.3.0"
